--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "angularfire2": "^5.0.0-rc.10",
     "core-js": "^2.5.4",
+    "firebase": "^5.0.4",
     "lodash": "^4.17.10",
     "rupture": "^0.7.1",
     "rxjs": "^6.0.0",
